# CppTemplate

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt
main/src/: main.cpp
